--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,6 +77,12 @@
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Panther\Ability_Panther_4r.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Panther\Ability_Panther_6l.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Panther\Ability_Panther_6r.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_SpittingSnake\Ability_Spitsnake_2l.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_SpittingSnake\Ability_Spitsnake_2r.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_SpittingSnake\Ability_Spitsnake_4l.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_SpittingSnake\Ability_Spitsnake_4r.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_SpittingSnake\Ability_Spitsnake_6l.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_SpittingSnake\Ability_Spitsnake_6r.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\De_Buff.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Upgrade.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Upgrade_Bear.cs" />
