--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -107,6 +107,7 @@
      <Compile Include="Assets\Scripts\UnitUpgrades\Upgrades_Panther.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Upgrades_Porcupine.cs" />
      <Compile Include="Assets\Scripts\UpgradeManager.cs" />
+     <None Include="Assets\Scripts\Levels\Levels.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
