--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Bear\Ability_Bear_4r.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Bear\Ability_Bear_6l.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Bear\Ability_Bear_6r.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Bear\Debuff_Bloodthirst.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Bear\Debuff_Taunt.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Horse\Ability_Horse_2l.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Horse\Ability_Horse_2r.cs" />
@@ -81,6 +82,15 @@
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Horse\Ability_Horse_4r.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Horse\Ability_Horse_6l.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Horse\Ability_Horse_6r.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_MonitorLizard\Ability_MonitorLizard_2l.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_MonitorLizard\Ability_MonitorLizard_2r.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_MonitorLizard\Ability_MonitorLizard_4l.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_MonitorLizard\Ability_MonitorLizard_4r.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_MonitorLizard\Ability_MonitorLizard_6l.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_MonitorLizard\Ability_MonitorLizard_6r.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_MonitorLizard\Debuff_HortativeOdor.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_MonitorLizard\Debuff_PurulentWounds.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_MonitorLizard\Debuff_SoothingOdor.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Panther\Ability_Panther_2l.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Panther\Ability_Panther_2r.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Abilities\Ability_Panther\Ability_Panther_4l.cs" />
@@ -113,6 +123,7 @@
      <Compile Include="Assets\Scripts\UnitUpgrades\Upgrade.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Upgrade_Bear.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Upgrades_Horse.cs" />
+     <Compile Include="Assets\Scripts\UnitUpgrades\Upgrades_MonitorLizard.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Upgrades_Panther.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Upgrades_Porcupine.cs" />
      <Compile Include="Assets\Scripts\UnitUpgrades\Upgrades_Spitsnake.cs" />
